# timestamp-please

./: AGENTS.md  AGENTS.ts  CHANGELOG.md  Cargo.toml  README.md
.agents/: general.md  project.md
.repoconf/hooks/: post-init.sh
src/: lib.rs
src/types/: timestamp.rs
