[package]
name = "timestamp-please"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Sometimes you just need a UNIX timestamp"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/timestamp-please"
repository = "https://github.com/DenisGorbachev/timestamp-please"
readme = "README.md"
keywords = []
categories = []
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.json",
    "commitlint.config.mjs",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    "yolobox"
]

[package.metadata.details]
title = "Sometimes you just need a UNIX timestamp"
tagline = ""
summary = ""
announcement = ""
readme = { generate = false }

[dependencies]
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_more = { version = "2.1.1", features = ["full"] }
errgonomic = { git = "https://github.com/DenisGorbachev/errgonomic" }
itertools = "0.14.0"
standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
strum = { version = "0.27.2", features = ["derive"] }
stub-macro = { version = "0.2.1" }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }

[package.metadata.cargo-machete]
ignored = [
    "derive-getters",
    "derive-new",
    "derive_more",
    "errgonomic",
    "itertools",
    "standard-traits",
    "strum",
    "stub-macro",
    "subtype",
]





