[package]
name = "timestamp-please"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Unix timestamp newtype with chrono and time interop"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/timestamp-please"
repository = "https://github.com/DenisGorbachev/timestamp-please"
readme = "README.md"
keywords = []
categories = []
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.json",
    "commitlint.config.mjs",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    "yolobox"
]

[package.metadata.details]
title = "Unix timestamp newtype with chrono and time interop"
tagline = ""
summary = ""
announcement = ""

[dependencies]
chrono = { version = "0.4", optional = true, default-features = true }
errgonomic = "0.5.0"
itoa = "1.0.17"
rkyv = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
time = { version = "0.3", optional = true }

[features]
default = ["std"]
std = []
